Fixed gap under homepage image

--- a/src/app/components/home-page/home-page.component.scss
+++ b/src/app/components/home-page/home-page.component.scss
@@ -19,6 +19,8 @@
 
 .image-container {
   width: 100%;
+  display: flex;
+  flex-direction: column;
 
   img {
     width: 100%;
